--- a/eclipse-projects/folha-ponto-backend/src/main/resources/translations/messages.properties
+++ b/eclipse-projects/folha-ponto-backend/src/main/resources/translations/messages.properties
@@ -1,2 +1,2 @@
 
-app.Lancamentos_incorretos_func = O Funcion\u00E1rio {0} - {1} possui {2} lan\u00E7amentos inv\u00E1lidos no dia {3}
+app.Lancamentos_incorretos_func = O Funcion\u00E1rio {0} - {1} possui {2} {3,choice,0#lan\u00E7amento|1#lan\u00E7amentos} no dia {4}
