--- a/eclipse-projects/folha-ponto-backend/src/main/resources/translations/messages_en.properties
+++ b/eclipse-projects/folha-ponto-backend/src/main/resources/translations/messages_en.properties
@@ -1,2 +1,2 @@
 
-app.Lancamentos_incorretos_func = Employee {0} - {1} has {2} invalid entries in {3}
+app.Lancamentos_incorretos_func = Employee {0} - {1} has {2} {3,choice,0#entry|1#entries} on {4}
