--- a/eclipse-projects/folha-ponto-backend/src/main/resources/translations/messages_es.properties
+++ b/eclipse-projects/folha-ponto-backend/src/main/resources/translations/messages_es.properties
@@ -1,2 +1,2 @@
 
-app.Lancamentos_incorretos_func = El empleado {0} - {1} tiene {2} entradas inv\u00E1lidas en {3}
+app.Lancamentos_incorretos_func = El empleado {0} - {1} tiene {2} {3,choice,0#entrada|1#entradas} en {4}
